# local-agent

./: .gitignore  CLASSIFIER_DATASETS.md  CLAUDE.md  PHASE1_PLAN.md  PRD.md  README.md  SYSTEM_PROMPT.md  secrets.properties.example
.github/workflows/: desktop-package.yml  ios-test.yml  prompt-eval-gate.yml
android-app/: build.gradle.kts  gradle.properties  secrets.properties.example  settings.gradle.kts
android-app/iosApp/: README.md
classifier-training/: README.md  pyproject.toml
classifier-training/prompts/: memory_generation.j2  memory_pair_expansion.j2  preflight_generation.j2  preflight_pair_expansion.j2
classifier-training/scripts/: generate_tokenizer_fixture.py
classifier-training/src/classifier_training/: __init__.py
classifier-training/src/classifier_training/ci/: __init__.py  regression_check.py
classifier-training/src/classifier_training/datasets/: __init__.py  dedup.py  schemas.py  stats.py  validate.py
classifier-training/src/classifier_training/generation/: expand_pairs.py  fill.py  generate.py  memory_hard_case_prototypes.py  preflight_pair_prototypes.py
classifier-training/src/classifier_training/labeling/: argilla_setup.py
classifier-training/src/classifier_training/review/: app.py
classifier-training/src/classifier_training/training/: __init__.py  benchmark_pixel7.py  data.py  eval.py  export_litert.py  losses.py  model.py  quantize.py  train.py
classifier-training/tests/: test_dedup.py  test_parser.py  test_regression_check.py  test_schemas.py
classifier-training/tests/fixtures/: tokenizer_canonical_inputs.json
docs/: ANYWHERE_ACCESS_PLAN.md  BUILD.md  DATA_SAFETY_NOTES.md  DESKTOP_PACKAGING.md  I18N_LOCALIZATION_PLAN.md  IOS_BUILD.md  JOBS_PLAN.md  M0_DECISION_MEMO.md  M3_M4_HANDOFF.md  M3_PLAN.md  M4_M5_HANDOFF.md  M4_PLAN.md  M5_KICKOFF_PROMPT.md  M7_KICKOFF.md  M7_PLAN.md  MACOS_BUILD.md  OLLAMA_REMOTE_LLM_PLAN.md  PRODUCTION_DESKTOP_RUNBOOK.md  PRODUCTION_RUNBOOK.md  SECURITY_FOLLOWUPS.md  SPIKE_RUNBOOK.md  THREAT_MODEL.md  USER_GUIDE.md  VOICE_IO.md  preflight_memory_shared_v1.0.0_MODEL_CARD.md
(+558 files in other folders)
