[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classifier-training"
version = "0.1.0"
description = "Dataset construction and classifier fine-tuning for the mobile-agent on-device assistant."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Context Solutions" }]
license = { text = "Proprietary" }

dependencies = [
    "pydantic>=2.7,<3",
    "jsonlines>=4.0,<5",
    "click>=8.1,<9",
    "jinja2>=3.1,<4",
    "anthropic>=0.40,<1",
    "tenacity>=8.2,<9",
    "rich>=13.7,<14",
    "python-dateutil>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "types-python-dateutil",
]
labeling = [
    # Argilla for labeling, agreement tracking, and import/export to JSONL.
    "argilla>=2.0,<3",
]
training = [
    # Pulled in only when the training scripts are run; keeps the labeling/dataset
    # workflow lightweight to install on labeler machines.
    "torch>=2.3,<3",
    "transformers>=4.44,<5",
    "datasets>=2.20,<3",
    "accelerate>=0.34,<1",
    "evaluate>=0.4,<1",
    "scikit-learn>=1.5,<2",
    "onnx>=1.16,<2",
    "onnxruntime>=1.18,<2",
    "ai-edge-torch>=0.2",  # LiteRT conversion (formerly TFLite)
]

[project.scripts]
ct-validate = "classifier_training.datasets.validate:main"
ct-generate-preflight = "classifier_training.generation.generate:preflight_cli"
ct-generate-memory = "classifier_training.generation.generate:memory_cli"
ct-argilla-init = "classifier_training.labeling.argilla_setup:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
